@@ -12,7 +12,6 @@ cloud_config_modules:
  - grub-dpkg
  - apt-update-upgrade
  - puppet
- - updates-check
  - disable-ec2-metadata
  - runcmd
  - byobu
